add main menu section

--- a/index.html
+++ b/index.html
@@ -536,15 +536,71 @@
 
 
 
-            <div class="main_menu">
+            <div class="main_menu flex">
 
-                bal bal bal
+                <div class="invite">
+
+                    <i class="fas fa-user-plus"></i>
+                    <div>Invite</div>
+
+                </div>
+
+                <div class="manage">
+
+                    <i class="fas fa-user-friends"></i>
+                    <div>Manage Partecipans</div>
+
+                </div>
+
+                <div class="polling">
+
+                    <i class="fas fa-chart-bar"></i>
+                    <div>Polling</div>
+
+                </div>
+
+                <div class="share green">
+
+                    <i class="fas fa-share-square"></i>
+                    <div>Share Screen</div>
+
+                </div>
+
+                <i class="fas fa-angle-up"></i>
+
+                <div class="chat">
+
+                    <i class="fas fa-comment"></i>
+                    <div>Chat</div>
+
+                </div>
+
+                <div class="record">
+
+                    <i class="fas fa-record-vinyl"></i>
+                    <div>Record</div>
+
+                </div>
+
+                <div class="breackout">
+
+                    <i class="fas fa-th-large"></i>
+                    <div>Breakout Rooms</div>
+
+                </div>
+
+                <div class="more">
+
+                    <i class="fas fa-ellipsis-h"></i>
+                    <div>More</div>
+
+                </div>
 
             </div>
 
             <div class="right_menu">
 
-                bal bal bla bal
+                
 
             </div>
 
