add right menu section

--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
 
             <div class="right_menu">
 
-                
+                <div class="end_meeting">End meeting</div>
 
             </div>
 
