correct share screen color

--- a/index.html
+++ b/index.html
@@ -559,9 +559,9 @@
 
                 </div>
 
-                <div class="share green">
+                <div class="share ">
 
-                    <i class="fas fa-share-square"></i>
+                    <i class="fas fa-share-square green"></i>
                     <div>Share Screen</div>
 
                 </div>
